--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GOOGLE_CLIENT_ID=213766690937-p6j2lpceusl9ee7f99he8vsuf4010l37.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 REDIRECT_URL=http://localhost:5000/auth/google/callback
+USER_EMAIL=projectdemo559@gmail.com
+PASSWORD=mprufdrnlfposehm
