redirect is not working correctly

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOOGLE_CLIENT_SECRET=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
 REDIRECT_URL=http://localhost:5000/auth/google/callback
 USER_EMAIL=projectdemo559@gmail.com
 PASSWORD=mprufdrnlfposehm
+ADMIN_EMAIL=dalvimangesh000@gmail.com
