added middleware check for login

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REDIRECT_URL=http://localhost:5000/auth/google/callback
 USER_EMAIL=projectdemo559@gmail.com
 PASSWORD=mprufdrnlfposehm
 ADMIN_EMAIL=dalvimangesh000@gmail.com
+SESSION_SECRETE=KEY
