option for overflow

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ USER_EMAIL=projectdemo559@gmail.com
 PASSWORD=mprufdrnlfposehm
 ADMIN_EMAIL=dalvimangesh000@gmail.com
 SESSION_SECRETE=KEY
+ADMIN_EMAIL1=salunkheyukta14@gmail.com
